--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="nav-container">
         <header>
-            <a href="index.html" class="logo">ELC</a>
+            <a href="index.html" class="logo"></a>
 
             <nav>
                 <ul>
@@ -26,21 +26,23 @@
     <div class="container">
 
         <section>
-            <p><h1> <stripes> Hi, my name is <b>Eduardo</b> </stripes></h1>
+            <p><h1><stripes> Eduardo </stripes> <br> Longen <br> Corrêa </h1>
             <br>
-            <h2> I'm an self taught web developer from Brazil.</h2></p>
+            <h2> Backend developer from Brazil. </h2>
+            <br>
+            <h3><stripes2> &#8592 Take a look at my portfolio! </stripes2></h3></p>
         </section>
 
         <section>
-            <h1>apps to post</h1>
+            <h4>Odinbook</h4>
         </section>
 
         <section>
-            <h1>apps to post</h1>
+            <h4>Odinbook</h4>
         </section>
 
         <section>
-            <h1>apps to post</h1>
+            <h4>Odinbook</h4>
         </section>
 
     </div>
