add courses to portfolio

--- a/index.html
+++ b/index.html
@@ -92,6 +92,69 @@
 						<!-- Footer -->
 
 					</div>
+				
+				<br />
+				<br />
+				<br />
+
+				<!-- Nav -->
+				<nav id="nav">
+					<ul class="links">
+						<li class="active"><a href="index.html">Backend Developer Roadmap</a></li>
+					</ul>
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/eduardolongencorr%C3%AAa/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://github.com/EduLongen" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					</ul>
+				</nav>
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- Featured Post -->
+							<article class="post featured">
+								<header class="major">
+									<h2><a href="#">The Odin Project</a></h2>
+									<p>Full Stack Ruby on Rails.<br />
+										Ruby on Rails course that covers Ruby, Ruby on Rails, HTML, CSS, Databases and Javascript.</p>
+								</header>
+								<a href="#" class="image main"><img src="images/theodinproject01.png" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://www.theodinproject.com/paths/full-stack-ruby-on-rails" class="button large">Check it out</a></li>
+								</ul>
+							</article>
+
+						<!-- Posts -->
+							<section class="posts">
+
+								<article>
+									<header>
+										<h2><a href="#">Comprehensive Ruby Programming</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/CRP01.jpg" alt="" /></a>
+									<p>Covers how to program in the Ruby programming language, starting from scratch and moving to advanced coding techniques.</p>
+									<ul class="actions special">
+										<li><a href="https://www.udemy.com/course/comprehensive-ruby-programming-tutorial/?utm_source=adwords&utm_medium=udemyads&utm_campaign=LongTail_la.EN_cc.BR&utm_content=deal4584&utm_term=_._ag_112130202440_._ad_467215026440_._kw__._de_c_._dm__._pl__._ti_dsa-1007766171312_._li_1032105_._pd__._&matchtype=&gclid=Cj0KCQjw8O-VBhCpARIsACMvVLOICX0e6--6w9Wpsa8Mobq3oX0bUmc-8-Z-GggmtRoaLABrxKifQBwaAu3mEALw_wcB" class="button">Check it out</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<header>
+										<h2><a href="#">Learn to Code <br /> with Ruby</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/LCR01.jpg" alt="" /></a>
+									<p>A comprehensive introduction to coding with the Ruby programming language.</p>
+									<br />
+									<ul class="actions special">
+										<li><a href="https://www.udemy.com/course/learn-to-code-with-ruby-lang/" class="button">Check it out</a></li>
+									</ul>
+								</article>
+								
+							</section>
+
+						<!-- Footer -->
+
+					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
