--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Eduardo<br />
 						Longen Corrêa</h1>
 						<p>Backend engineer from Brazil.</p>
-						<p>Ruby - Ruby on Rails - PostgreSQL - HTML - CSS - GitHub</p>
+						<p>Ruby - Ruby on Rails - DDD - PostgreSQL - HTML - CSS - GitHub</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -147,6 +147,18 @@
 									<br />
 									<ul class="actions special">
 										<li><a href="https://www.udemy.com/course/learn-to-code-with-ruby-lang/" class="button">Check it out</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<header>
+										<h2><a href="#">Domain Driven Design & <br /> Microservices for Architects</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/DDDMA01.jpg" alt="" /></a>
+									<p>Learn how to build microservices applications starting with business analysis and domain driven design.</p>
+									<br />
+									<ul class="actions special">
+										<li><a href="https://www.udemy.com/course/domain-driven-design-and-microservices/" class="button">Check it out</a></li>
 									</ul>
 								</article>
 								
