--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg">
 
-			<a class="navbar-brand" href="/index.html">Eduardo Longen Corrêa</a>
+			<a class="navbar-brand" href="index.html">Eduardo Longen Corrêa</a>
 
   			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   			  <span class="navbar-toggler-icon"></span>
@@ -32,10 +32,10 @@
                 
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   	<li class="nav-item active">
-                    	<a class="nav-link" href="/views/portfolio/portfolio.html">Portfolio</a>
+                    	<a class="nav-link" href="views/portfolio/portfolio.html">Portfolio</a>
                   	</li>
                   	<li class="nav-item active">
-                    	<a class="nav-link" href="/views/blog/blog.html">Blog</a>
+                    	<a class="nav-link" href="views/blog/blog.html">Blog</a>
                   	</li>
                   	<li class="nav-item active">
                     	<a class="nav-link" href="https://github.com/EduLongen">Github</a>
@@ -80,7 +80,7 @@
 							</div>
 							<div class="col-md-6">
 								<a href="/views/blog/begginers_guide.html">
-									<img src="/assets/img/rails_train.jpeg" class="card-img" alt="rails_train">
+									<img src="assets/img/rails_train.jpeg" class="card-img" alt="rails_train">
 								</a>
 							</div>
 						</div>
@@ -100,7 +100,7 @@
 							</div>
 							<div class="col-md-6">
 								<a href="/views/blog/begginers_guide.html">
-									<img src="/assets/img/rails_train.jpeg" class="card-img" alt="rails_train">
+									<img src="assets/img/rails_train.jpeg" class="card-img" alt="rails_train">
 								</a>
 							</div>
 						</div>
