--- a/blog.html
+++ b/blog.html
@@ -8,13 +8,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-	<script src="../Elc/assets/js/script.js"></script>
+	<script src="script.js"></script>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Montserrat:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="../Elc/assets/css/style.css">
+	<link rel="stylesheet" href="style.css">
     
     <title>ELC blog</title>
 </head>
@@ -22,7 +22,7 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg">
 
-			<a class="navbar-brand" href="../Elc/index.html">Eduardo Longen Corrêa</a>
+			<a class="navbar-brand" href="index.html">Eduardo Longen Corrêa</a>
 
   			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   			  <span class="navbar-toggler-icon"></span>
@@ -32,10 +32,10 @@
                 
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   	<li class="nav-item active">
-                    	<a class="nav-link" href="../Elc/views/portfolio/portfolio.html">Portfolio</a>
+                    	<a class="nav-link" href="portfolio.html">Portfolio</a>
                   	</li>
                   	<li class="nav-item active">
-                    	<a class="nav-link" href="../Elc/views/blog/blog.html">Blog</a>
+                    	<a class="nav-link" href="blog.html">Blog</a>
                   	</li>
                   	<li class="nav-item active">
                     	<a class="nav-link" href="https://github.com/EduLongen">Github</a>
@@ -73,14 +73,14 @@
 						<div class="row no-gutters">
 							<div class="col-md-6">
 								<div class="card-body">
-									<a class="blog-card-title" href="../Elc/views/blog/begginers_guide.html">A Beginner's Guide to Ruby on Rails</a>
+									<a class="blog-card-title" href="begginers_guide.html">A Beginner's Guide to Ruby on Rails</a>
 									<p class="blog-card-text">This post unlocks the secrets of Ruby on Rails, the framework that makes building killer apps a breeze. Learn what it is, how it works, and why it's your shortcut to coding stardom.</p>
 									<p class="blog-card-date">Jan 10, 2024</p>
 								</div>
 							</div>
 							<div class="col-md-6">
-								<a href="../Elc/views/blog/begginers_guide.html">
-									<img src="../Elc/assets/img/rails_train.jpeg" class="card-img" alt="rails_train">
+								<a href="begginers_guide.html">
+									<img src=".rails_train.jpeg" class="card-img" alt="rails_train">
 								</a>
 							</div>
 						</div>
@@ -99,8 +99,8 @@
 								</div>
 							</div>
 							<div class="col-md-6">
-								<a href="../Elc/views/blog/begginers_guide.html">
-									<img src="../Elc/assets/img/rails_train.jpeg" class="card-img" alt="rails_train">
+								<a href="begginers_guide.html">
+									<img src="rails_train.jpeg" class="card-img" alt="rails_train">
 								</a>
 							</div>
 						</div>
