--- a/portfolio.html
+++ b/portfolio.html
@@ -15,13 +15,13 @@
 		<a  href="https://icons8.com/icon/10246/html">
 		<a  href="https://icons8.com/icon/10236/css">
 
-	<script src="/script.js"></script>
+	<script src="script.js"></script>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Montserrat:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="/style.css">
+	<link rel="stylesheet" href="style.css">
     
     <title>ELC blog</title>
 </head>
@@ -29,7 +29,7 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg">
 
-			<a class="navbar-brand" href="/index.html">Eduardo Longen Corrêa</a>
+			<a class="navbar-brand" href="index.html">Eduardo Longen Corrêa</a>
 
   			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   			  <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
                     	<a class="nav-link" href="portfolio.html">Portfolio</a>
                   	</li>
                   	<li class="nav-item active">
-                    	<a class="nav-link" href="/blog.html">Blog</a>
+                    	<a class="nav-link" href="blog.html">Blog</a>
                   	</li>
                   	<li class="nav-item active">
                     	<a class="nav-link" href="https://github.com/EduLongen">Github</a>
