--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
 							</div>
 							<div class="col-md-6">
 								<a href="begginers_guide.html">
-									<img src=".rails_train.jpeg" class="card-img" alt="rails_train">
+									<img src="rails_train.jpeg" class="card-img" alt="rails_train">
 								</a>
 							</div>
 						</div>
