new post and updated styles

--- a/begginers_guide.html
+++ b/begginers_guide.html
@@ -160,4 +160,14 @@
         </div>
 
     </main>
+
+	<footer>
+		<div class="footer-container">
+		</div>
+		<div class="footer-text-container">
+			<p>Eduardo Longen Corrêa © 2024</p>
+			<a class="footer-text-container" href="https://icons8.com/icon/2oqQYJZ9YJ5e/arrow">Icons by Icons8</a>
+		</div>
+	</footer>
+
 </body>
