--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&family=Montserrat:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="style.css">
     
     <title>ELC blog</title>
+
 </head>
 <body>
     <header class="sticky-top">
@@ -73,15 +75,16 @@
 						<div class="row no-gutters">
 							<div class="col-md-6">
 								<div class="card-body">
-									<a class="blog-card-title" href="begginers_guide.html">A Beginner's Guide to Ruby on Rails</a>
-									<p class="blog-card-text">This post unlocks the secrets of Ruby on Rails, the framework that makes building killer apps a breeze. Learn what it is, how it works, and why it's your shortcut to coding stardom.</p>
-									<p class="blog-card-date">Jan 10, 2024</p>
+									<a class="blog-card-title" href="rails_routing.html">Demystifying the Rails Routes</a>
+									<p class="blog-card-text">This guide navigates the basics and dives into advanced features like nested routes and dynamic path generation, so your web app traffic flows smoothly.</p>
+									<p class="blog-card-date">Jan 15, 2024</p>
 								</div>
 							</div>
 							<div class="col-md-6">
-								<a href="begginers_guide.html">
-									<img src="rails_train.jpeg" class="card-img" alt="rails_train">
+								<a href="rails_routing.html">
+									<img src="rails_routing.jpeg" class="card-img" alt="Foto de Bogdan Karlenko na Unsplash">
 								</a>
+								<p class="img-source">Photo by Bogdan Karlenko at Unsplash</p>
 							</div>
 						</div>
 					</div>
@@ -93,7 +96,7 @@
 						<div class="row no-gutters">
 							<div class="col-md-6">
 								<div class="card-body">
-									<h5 class="blog-card-title">A Beginner's Guide to Ruby on Rails</h5>
+									<a class="blog-card-title" href="begginers_guide.html">A Beginner's Guide to Ruby on Rails</a>
 									<p class="blog-card-text">This post unlocks the secrets of Ruby on Rails, the framework that makes building killer apps a breeze. Learn what it is, how it works, and why it's your shortcut to coding stardom.</p>
 									<p class="blog-card-date">Jan 10, 2024</p>
 								</div>
@@ -102,6 +105,7 @@
 								<a href="begginers_guide.html">
 									<img src="rails_train.jpeg" class="card-img" alt="rails_train">
 								</a>
+								<p class="img-source">Photo by Guilherme Stecanella at Unsplash</p>
 							</div>
 						</div>
 					</div>
@@ -111,6 +115,16 @@
 		</div>
 
 	</main>
+
+	<footer>
+		<div class="footer-container">
+		</div>
+		<div class="footer-text-container">
+			<p>Eduardo Longen Corrêa © 2024</p>
+			<a class="footer-text-container" href="https://icons8.com/icon/2oqQYJZ9YJ5e/arrow">Icons by Icons8</a>
+		</div>
+	</footer>
+
 	
 </body>
 </html>
