--- a/rails_routing.html
+++ b/rails_routing.html
@@ -155,7 +155,7 @@
                         <li><b>Dynamically Generating Paths with Parameters</b><br>
                                 Rails provides built-in helpers for common routes:
                             <br><br>
-                            <code><%= link_to "Edit", edit_article_path(@article) %></code>>
+                            <code><%= link_to "Edit", edit_article_path(@article) %></code>
                             <br><br>
                             This generates <code class="code-back">/articles/123/edit</code> for the article with ID 123. Think of it as having a map that automatically updates with the correct path based on the destination you choose.
                         </li>
@@ -164,7 +164,7 @@
                         <li><b>Generating Paths in Controllers</b><br>
                             Use <code>url_for</code> within controllers to generate paths:
                             <br><br>
-                            <code>redirect_to article_url(@article)</code>>
+                            <code>redirect_to article_url(@article)</code>
                             <br><br>
                             This redirects to the article's show page. It's like having a traffic controller that can redirect vehicles to different routes based on current conditions.
                         </li>
