update portfolio and responsiveness

--- a/portfolio.html
+++ b/portfolio.html
@@ -83,12 +83,14 @@
 					<div class="card-body">
 						<p class="card-text">A social media website, Odinbook, focusing on core user functionality. The project involved building features such as user authentication, follow requests, post creation, liking posts, commenting on posts, and user profiles.</p>
 						<div class="language-symbol">
-							<img class="symbol" width="35" height="35" src="https://img.icons8.com/ios-filled/50/ruby-programming-language.png" alt="ruby-programming-language"/>
-							<img class="symbol" width="40" height="40" src="https://img.icons8.com/windows/64/ruby-on-rails.png" alt="ruby-on-rails"/>
-							<img class="symbol" width="40" height="40" src="https://img.icons8.com/ios-filled/50/javascript.png" alt="javascript"/>
-							<img class="symbol" width="40" height="40" src="https://img.icons8.com/ios-filled/50/postgreesql.png" alt="postgreesql"/>
-							<img class="symbol" width="40" height="40" src="https://img.icons8.com/ios-filled/50/html.png" alt="html"/>
-							<img class="symbol" width="40" height="40" src="https://img.icons8.com/ios-filled/50/css.png" alt="css"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/ruby-programming-language.png" alt="ruby-programming-language"/>
+							<img class="symbol" src="https://img.icons8.com/windows/64/ruby-on-rails.png" alt="ruby-on-rails"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/javascript.png" alt="javascript"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/postgreesql.png" alt="postgreesql"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/html.png" alt="html"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/css.png" alt="css"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/github.png" alt="github"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/git.png" alt="git"/>
 						</div>
 					</div>
 				</div>
@@ -99,16 +101,49 @@
 						<img src="centro_linguas.png" class="card-img-top" alt="Centro de Linguas">
 					</a>
 					<div class="card-body">
-						<p class="card-text">A static landing page for a language course presenting the offered languages, professors' profiles, methodology, frequently asked questions and linked cards that show recent events that are published on their instagram page.</p>
+						<p class="card-text">Backend infrastructure for a dynamic landing page using Node.js, Sanity, and Vercel. Features include displaying offered languages, professors' profiles, etc. Admin can update and add new information through the Sanity content management system.</p>
 						<div class="language-symbol">
-							<img class="symbol" width="40" height="40" src="https://img.icons8.com/ios-filled/50/javascript.png" alt="javascript"/>
-							<img class="symbol" width="40" height="40" src="https://img.icons8.com/windows/64/nodejs.png" alt="nodejs"/>
-							<img class="symbol" width="40" height="40" src="https://img.icons8.com/ios-filled/50/html.png" alt="html"/>
-							<img class="symbol" width="40" height="40" src="https://img.icons8.com/ios-filled/50/css.png" alt="css"/>
+							<img class="symbol" src="https://img.icons8.com/windows/64/nodejs.png" alt="nodejs"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/html.png" alt="html"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/javascript.png" alt="javascript"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/css.png" alt="css"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/github.png" alt="github"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/git.png" alt="git"/>
 						</div>
 					</div>
 				</div>
-			
+			</div>
+			<div class="div3"> 
+				<div class="card" style="width: fit-content;">
+					<a href="https://github.com/EduLongen/">
+						<img src="inventory.png" class="card-img-top" alt="InventoryKeeper">
+					</a>
+					<div class="card-body">
+						<p class="card-text">A Figma prototype with database model in Mysql for a inventory management website. Track items while managing them with CRUD functionalities. The system requirements, interface, and database model were validated by the user Biopark Educação.</p>
+						<div class="language-symbol">
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/mysql.png" alt="mysql"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/java-coffee-cup-logo--v1.png" alt="java-coffee-cup-logo--v1"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/figma--v1.png" alt="figma--v1"/>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="div4"> 
+				<div class="card" style="width: fit-content;">
+					<a href="https://github.com/EduLongen/ReservaCenica">
+						<img src="reserva.png" class="card-img-top" alt="Reserva Cênica">
+					</a>
+					<div class="card-body">
+						<p class="card-text">
+							A Theater Booking System to keep reservations organized. The user can easily search, add, remove, and update seat sales. It uses a balanced binary tree to store sales, with each node key representing a sold seat number.</p>
+						<div class="language-symbol">
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/c.png" alt="c"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/github.png" alt="github"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/git.png" alt="git"/>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
 	</main>
