--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
     <title>ELC blog</title>
 </head>
 <body>
-    <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg">
+  <header class="sticky-top">
+    <nav class="navbar navbar-expand-lg">
 
 			<a class="navbar-brand" href="index.html">Eduardo Longen Corrêa</a>
 
@@ -36,31 +36,32 @@
   			  <span class="navbar-toggler-icon"></span>
   			</button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  	<li class="nav-item active">
-                    	<a class="nav-link" href="portfolio.html">Portfolio</a>
-                  	</li>
-                  	<li class="nav-item active">
-                    	<a class="nav-link" href="blog.html">Blog</a>
-                  	</li>
-                  	<li class="nav-item active">
-                    	<a class="nav-link" href="https://github.com/EduLongen">Github</a>
-                  	</li>
-                  	<li class="nav-item active">
-                    	<a class="nav-link" href="https://www.linkedin.com/in/eduardolongencorr%C3%AAa/">Linkedin</a>
-                  	</li>
-                </ul>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          	<li class="nav-item active">
+             	<a class="nav-link" href="portfolio.html">Portfolio</a>
+          	</li>
+           	<li class="nav-item active">
+              <a class="nav-link" href="blog.html">Blog</a>
+            </li>
+            <li class="nav-item active">
+            	<a class="nav-link" href="https://github.com/EduLongen">Github</a>
+            </li>
+						<li class="nav-item active">
+            	<a class="nav-link" href="https://gitlab.com/EduLongen">Gitlab</a>
+            </li>
+            <li class="nav-item active">
+            	<a class="nav-link" href="https://www.linkedin.com/in/eduardolongencorr%C3%AAa/">Linkedin</a>
+            </li>
+          </ul>
 
-				<button type="button" class="btn btn-secondary" data-bs-container="body" 
-					data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
-					Login
-				</button>
-                
-            </div>
-        </nav>
-    </header>
+					<button type="button" class="btn btn-secondary" data-bs-container="body" 
+						data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
+						Login
+					</button>    
+        </div>
+    </nav>
+  </header>
 
 	<main>
 
@@ -77,8 +78,28 @@
 		<div class="parent">
 			<div class="div1"> 
 				<div class="card" style="width: fit-content;">
+					<a href="https://gitlab.com/grupo01ads3/controledeestoque">
+						<img src="inventario.png" class="card-img-top" alt="Odinbook">
+					</a>
+					<div class="card-body">
+						<p class="card-text">Website created to provide a complete solution for managing equipment and tools used at Biopark Education. It allows the Biopark Education team to track which equipment is available, which is in use, where it is being used, and who has checked it out.</p>
+						<div class="language-symbol">
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/java-coffee-cup-logo--v1.png" alt="java-coffee-cup-logo--v1"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/javascript.png" alt="javascript"/>
+							<img class="symbol" src="spring.png" alt="spring-logo"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/mysql.png" alt="mysql"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/html.png" alt="html"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/css.png" alt="css"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/gitlab.png" alt="gitlab"/>
+							<img class="symbol" src="https://img.icons8.com/ios-filled/50/git.png" alt="git"/>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="div2"> 
+				<div class="card" style="width: fit-content;">
 					<a href="https://github.com/EduLongen/Odinbook">
-						<img src="odinbook.png" class="card-img-top" alt="Odinbook">
+						<img src="odinbook.jpeg" class="card-img-top" alt="Odinbook">
 					</a>
 					<div class="card-body">
 						<p class="card-text">A social media website, Odinbook, focusing on core user functionality. The project involved building features such as user authentication, follow requests, post creation, liking posts, commenting on posts, and user profiles.</p>
@@ -95,10 +116,10 @@
 					</div>
 				</div>
 			</div>
-			<div class="div2"> 
+			<div class="div3"> 
 				<div class="card" style="width: fit-content;">
 					<a href="https://github.com/EduLongen/Centro_de_linguas_bpkedu">
-						<img src="centro_linguas.png" class="card-img-top" alt="Centro de Linguas">
+						<img src="centrodelinguas.jpeg" class="card-img-top" alt="Centro de Linguas">
 					</a>
 					<div class="card-body">
 						<p class="card-text">Backend infrastructure for a dynamic landing page using Node.js, Sanity, and Vercel. Features include displaying offered languages, professors' profiles, etc. Admin can update and add new information through the Sanity content management system.</p>
@@ -113,7 +134,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="div3"> 
+			<div class="div4"> 
 				<div class="card" style="width: fit-content;">
 					<a href="https://github.com/EduLongen/">
 						<img src="inventory.png" class="card-img-top" alt="InventoryKeeper">
@@ -128,7 +149,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="div4"> 
+			<div class="div5"> 
 				<div class="card" style="width: fit-content;">
 					<a href="https://github.com/EduLongen/ReservaCenica">
 						<img src="reserva.png" class="card-img-top" alt="Reserva Cênica">
