--- a/rails_routing.html
+++ b/rails_routing.html
@@ -28,40 +28,40 @@
 
 <body>
 	<header class="sticky-top">
-		<nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg">
 
 			<a class="navbar-brand" href="index.html">Eduardo Longen Corrêa</a>
 
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
+  			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  			  <span class="navbar-toggler-icon"></span>
+  			</button>
 
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          	<li class="nav-item active">
+             	<a class="nav-link" href="portfolio.html">Portfolio</a>
+          	</li>
+           	<li class="nav-item active">
+              <a class="nav-link" href="blog.html">Blog</a>
+            </li>
+            <li class="nav-item active">
+            	<a class="nav-link" href="https://github.com/EduLongen">Github</a>
+            </li>
+						<li class="nav-item active">
+            	<a class="nav-link" href="https://gitlab.com/EduLongen">Gitlab</a>
+            </li>
+            <li class="nav-item active">
+            	<a class="nav-link" href="https://www.linkedin.com/in/eduardolongencorr%C3%AAa/">Linkedin</a>
+            </li>
+          </ul>
 
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item active">
-						<a class="nav-link" href="portfolio.html">Portfolio</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="blog.html">Blog</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="https://github.com/EduLongen">Github</a>
-					</li>
-					<li class="nav-item active">
-						<a class="nav-link" href="https://www.linkedin.com/in/eduardolongencorr%C3%AAa/">Linkedin</a>
-					</li>
-				</ul>
-
-				<button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover"
-					data-bs-placement="bottom" data-bs-content="Bottom popover">
-					Login
-				</button>
-
-			</div>
-		</nav>
-	</header>
+					<button type="button" class="btn btn-secondary" data-bs-container="body" 
+						data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
+						Login
+					</button>    
+        </div>
+    </nav>
+  </header>
 
 	<main>
 
